force-app/main/default/objects/WhatsApp_Outbound_Event__e/WhatsApp_Outbound_Event__e.object-meta.xml
<CustomObject>
    <label>WhatsApp Outbound Event</label>
    <pluralLabel>WhatsApp Outbound Events</pluralLabel>
</CustomObject>