force-app/main/default/objects/WhatsApp_Outbound_Event__e/fields/Content__c.field-meta.xml
<CustomField>
    <fullName>Content__c</fullName>
    <description>Message content to send</description>
    <label>Content</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>