force-app/main/default/objects/WhatsApp_Outbound_Event__e/fields/Conversation_ID__c.field-meta.xml
<CustomField>
    <fullName>Conversation_ID__c</fullName>
    <description>Conversation record ID</description>
    <label>Conversation ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>