force-app/main/default/objects/WhatsApp_Outbound_Event__e/fields/Recipient_Phone__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Phone__c</fullName>
    <description>Recipient phone number</description>
    <label>Recipient Phone</label>
    <length>50</length>
    <type>Text</type>
</CustomField>